--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "gpt3",
-	"homepage": "https://github.com/siangyin/gpt3-ui",
+	"homepage": ".",
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
@@ -17,9 +17,7 @@
 		"start": "react-scripts start",
 		"build": "react-scripts build",
 		"test": "react-scripts test",
-		"eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+		"eject": "react-scripts eject"
 	},
 	"eslintConfig": {
 		"extends": [
